# Blocks

./: .clang-format  .gitignore  Application.cpp  Application.h  Application_Edit.cpp  Application_Edit.h  Application_Level.cpp  Application_Level.h  Application_Run.cpp  Application_Run.h  CMakeLists.txt  Global.h  format.h  main.cpp  resources.qrc  todolist
Actions/: Action.cpp  Action.h  AddClusterAction.cpp  AddClusterAction.h  GenericModelAction.cpp  GenericModelAction.h
Application/: Application_Edit.cpp  Application_Edit.h  Application_Level.cpp  Application_Level.h  Application_Run.cpp  Application_Run.h
Io/: Serializer.cpp  Serializer.h  SettingsManager.cpp  SettingsManager.h
action/: Action.h  Action_enums.h  AddBlockAction.cpp  AddBlockAction.h  AddBlockToClusterAction.cpp  AddBlockToClusterAction.h  AddClusterAction.cpp  AddClusterAction.h  AddFloorBlockAction.cpp  AddFloorBlockAction.h  AddLevelBlockAction.cpp  AddLevelBlockAction.h  ChangeFloorBlockAction.cpp  ChangeFloorBlockAction.h  ChangeLevelBlockAction.cpp  ChangeLevelBlockAction.h  DeleteClusterAction.cpp  DeleteClusterAction.h  GenericCommandEditBoxAction.cpp  GenericCommandEditBoxAction.h  GenericModelAction.cpp  GenericModelAction.h  GenericTextEditAction.cpp  GenericTextEditAction.h  GlobAction.cpp  GlobAction.h  MergeClusterAction.cpp  MergeClusterAction.h  ModelAction.cpp  ModelAction.h  NewClusterAction.cpp  NewClusterAction.h  RemoveBlockAction.cpp  RemoveBlockAction.h  RemoveBlockFromClusterAction.cpp  RemoveBlockFromClusterAction.h  RemoveClusterAction.cpp  RemoveClusterAction.h  RemoveFloorBlockAction.cpp  RemoveFloorBlockAction.h  (+6 more)
app/: Application.cpp  Application.h  ApplicationEdit.cpp  ApplicationEdit.h  ApplicationRun.cpp  ApplicationRun.h  Application_Edit.cpp  Application_Edit.h  Application_Level.cpp  Application_Level.h  Application_Run.cpp  Application_Run.h  Application_constants.h  Application_enums.h  ModelViewInterface.cpp  ModelViewInterface.h
assets/: credits.txt  stylesheet.qss
audio/: AudioManager.cpp  AudioManager.h  AudioSettings.cpp  AudioSettings.h  Audio_enums.h  Music.cpp  Music.h  SoundEffect.cpp  SoundEffect.h
aux/: Aux.cpp  Aux.h  Point.cpp  Point.h
cont/: MainInterface.cpp  MainInterface.h  MainViewMouseManager.cpp  MainViewMouseManager.h
contr/: MainInterface.cpp  MainInterface.h  MainViewMouseManager.cpp  MainViewMouseManager.h
datstr/: CircularBuffer.cpp  CircularBuffer.h  Stash.h
global/: CircularBuffer.cpp  CircularBuffer.h  Conf.h  Global.cpp  Global.h  alg.cpp  alg.h  constants.h  cst.h  defines.h  fns.cpp  fns.h  geom.cpp  geom.h  overloaded.h
(+267 files in other folders)
